--- a/src/app/pages/authentication/login/with-bg-image/with-bg-image.component.html
+++ b/src/app/pages/authentication/login/with-bg-image/with-bg-image.component.html
@@ -10,42 +10,44 @@
             <div class="auth-box">
               <div class="row m-b-20">
                 <div class="col-md-12">
-                  <h3 class="text-left txt-primary">Sign In</h3>
+                  <h3 class="text-left txt-primary">Se connecter</h3>
                 </div>
               </div>
               <hr/>
               <div class="input-group">
-                <input type="email" class="form-control" placeholder="Your Email Address">
+                <input type="email" class="form-control" placeholder="Nom d'utilisateur">
                 <span class="md-line"></span>
               </div>
               <div class="input-group">
-                <input type="password" class="form-control" placeholder="Password">
+                <input type="password" class="form-control" placeholder="Mot de passe">
                 <span class="md-line"></span>
               </div>
               <div class="row m-t-25 text-left">
-                <div class="col-sm-7 col-xs-12">
+                <div class="col-sm-6nb col-xs-12">
                   <div class="checkbox-fade fade-in-primary">
                     <label>
                       <input type="checkbox" value="">
                       <span class="cr"><i class="cr-icon icofont icofont-ui-check txt-primary"></i></span>
-                      <span class="text-inverse">Remember me</span>
+                      <span class="text-inverse">Se souvenir de moi</span>
                     </label>
                   </div>
                 </div>
-                <div class="col-sm-5 col-xs-12 forgot-phone text-right">
-                  <a [routerLink]="['/authentication/forgot']" class="text-right f-w-600 text-inverse"> Forgot Your Password?</a>
+                <div class="col-sm-6 col-xs-12 forgot-phone text-right">
+                  <a [routerLink]="['/authentication/forgot']" class="text-right f-w-600 text-inverse"> Mot de passe oublié?</a>
                 </div>
               </div>
               <div class="row m-t-30">
                 <div class="col-md-12">
-                  <button type="button" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20">Sign in</button>
+                  <button type="button" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20">Se connecter</button>
                 </div>
               </div>
               <hr/>
               <div class="row">
                 <div class="col-md-10">
-                  <p class="text-inverse text-left m-b-0">Thank you and enjoy our website.</p>
-                  <p class="text-inverse text-left"><b>Your Autentification Team</b></p>
+                  <p class="text-inverse text-left m-b-0">
+                    <a href="#">Visitez notre site web</a>
+                  </p>
+                  <p class="text-inverse text-left"><b>Team - SGD Sénégal</b></p>
                 </div>
                 <div class="col-md-2">
                   <img src="assets/images/auth/Logo-small-bottom.png" alt="small-logo.png">
